--- a/products/templates/products/single.html
+++ b/products/templates/products/single.html
@@ -45,7 +45,8 @@
 
 				<input type="number" min="1" max="9" value="1" name="quantity" class="form-control">
 				<br>
-				<button type="submit" class="btn btn-success">add to Shopping Cart</button>
+				<button id="cart" type="submit" class="btn btn-success">Add to Cart</button><br><br>
+				<span id="login" style="display: none;">You must first <a href="{% url 'user_login' %}">Log in</a></span>
 			</form>
 		</div>		
 	</div>
@@ -56,4 +57,16 @@
 	</div>
 </div>
 
+{% if user.is_authenticated %}
+{% else %}
+<script>
+document.getElementById("cart").addEventListener("click", function(e){
+  e.preventDefault();
+  document.getElementById('login').style.removeProperty("display");
+});
+</script>
+{% endif %}
+
+
 {% endblock %}
+
