--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -13,7 +13,7 @@
       </form>
       <div class="page-header"></div>
       <p class="text-center">Don’t have an account?<a href="{% url 'user_register' %}"> Register an account here</a>.</p>
-    
+</div>
 </div>
 
 {% endblock %}
