--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -9,11 +9,9 @@ Account Info - {{ block.super }}
 {% include 'breadcrumbs.html' %}
 <div class='col-md-3'>
 	<ul class="nav nav-pills nav-stacked">
-		<li role="presentation" class="active"><a href="#">account information</a></li>	
-		{% comment %}
-		<li role="presentation"><a href="{% url 'user_billing_address' %}">Billing Address</a></li>
-		{% endcomment %}	
-		<li role="presentation"><a href="{% url 'user_mailing_address'%}">Mail address</a></li>
+		<li role="presentation" class="active"><a href="{% url 'user_account_info' %}">account information</a></li>	
+		<li role="presentation"><a href="{% url 'user_mailing_address'%}">Shipping address</a></li>
+		<li role="presentation"><a href="{% url 'user_balance_info'%}">account balance</a></li>
 	</ul>
 </div>
 <div class='col-md-9'>
@@ -23,11 +21,8 @@ Account Info - {{ block.super }}
 	    {{ form.email.label }}
 	    {{ form.email|add_class:"form-control"|append_attr:"placeholder:email address" }}<br>
 	    {{ form.username.label }}
-	    {{ form.username|add_class:"form-control"|append_attr:"placeholder:username" }}<br>
-	    {{ form.first_name.label }}
-	    {{ form.first_name|add_class:"form-control"|append_attr:"placeholder:first name" }}<br>
-	    {{ form.last_name.label }}
-	    {{ form.last_name|add_class:"form-control"|append_attr:"placeholder:Last name" }}<br>
+		{{ form.username|add_class:"form-control"|append_attr:"placeholder:username" }}<br>
+		<span>Balance : </span>&#8377; {{ user.balance }} <br><br><br>
 
 	    <input class='btn btn-primary' type="submit" value="submit" />
 	</form>
