--- a/accounts/templates/accounts/mailingaddress.html
+++ b/accounts/templates/accounts/mailingaddress.html
@@ -9,11 +9,12 @@ Mailing Address - {{ block.super }}
 <div class='col-md-3'>
 	<ul class="nav nav-pills nav-stacked">
 		<li role="presentation"><a href="{% url 'user_account_info' %}">account information</a></li>
-		<li role="presentation" class="active"><a href="#">Shipping address</a></li>	  
+		<li role="presentation" class="active"><a href="{% url 'user_mailing_address' %}">Shipping address</a></li>	  
+		<li role="presentation"><a href="{% url 'user_balance_info'%}">account balance</a></li>
 	</ul>
 </div>
 <div class='col-md-9'>
-	<h3>Mail address</h3>
+	<h3>Shipping address</h3>
 	<form action="{% url 'user_mailing_address' %}" method="post">
 	    {% csrf_token %}
 	    {{ form.as_p }}
