--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -32,15 +32,15 @@
 		<div class="col-xs-2 col-md-2  nav">	
 			<ul class="nav navbar-nav">
 			{% if user.is_authenticated %}
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">my account<span class="caret"></span></a>
+					<div class="dropdown">
+						<button class="btn dropdown-toggle" data-toggle="dropdown" type="button"> {{user.username}}  <span class="caret"></span></button>
 						<ul class="dropdown-menu">
 							<li><a href="{% url 'user_account_info' %}">Account details</a></li>
 							<li><a href="{% url 'my_orders' %}">Order record</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="{% url 'user_logout' %}">Log out</a></li>
 						</ul>
-					</li>
+					</div>
 			{% else %}
 				<a href='{% url "user_login" %}'><span class='navbar-text'>Sign in</span></a>
 			{% endif %}
